[package]
name = "tg-vimhelpbot"
version = "0.2.0"
authors = ["Maximilian Siling <root@goldstein.rs>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
teloxide = { version = "0.12.0", default-features = false, features = ["ctrlc_handler", "auto-send", "rustls"] }
dotenvy = "0.15.7"
regex = "1.3.9"
once_cell = "1.4.0"
percent-encoding = "2.1.0"
itertools = "0.9.0"
uuid = { version = "0.8.2", features = ["v4"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
color-eyre = "0.6.2"
tokio = { version = "1.24.2", features = ["macros", "rt", "rt-multi-thread"] }
